2002-05-01  John Levon  <moz@compsoc.man.ac.uk>

	* dae/opd_proc.c:
	* libdb/db-manage.c:
	* libdb/db-test.c:
	* libdb/db.h:
	* pp/op_merge.cpp:
	* pp/op_time.cpp:
	* pp/oprofpp_util.cpp: allow read-only sample
	  file reading
	
	* oprof_report/hotspot_view.cpp: fix warning
 
2002-05-01  John Levon  <moz@compsoc.man.ac.uk>

	* dae/op_start:
	* dae/oprofiled.c:
	* doc/oprofile.1.in: 
	* doc/oprofile.xml: 
	* gui/oprof_start.cpp: 
	* module/op_nmi.c:
	* module/op_rtc.c:
	* module/op_syscalls.c: 
	* module/oprofile.h:
	* module/oprofile.c: move pid/pgrp filter into
	  userspace only. Remove --ignore-myself
 
2002-04-30  John Levon  <moz@compsoc.man.ac.uk>

	* op_user.h:
	* dae/opd_proc.c:
	* pp/oprofpp_util.cpp: first part of removing
	  OPD_KERNEL_OFFSET

2002-04-30  John Levon  <moz@compsoc.man.ac.uk>

	* module/op_nmi.c: also allow user to see 0/ 1/ contents
 
2002-04-30  William Cohen  <wcohen@nc.rr.com>

	* module/oprofile.c: Allow non-root examination of
	  /proc/sys/dev/oprofile and initiation of dump. 

	* dae/op_dump: modify message for above

2002-04-30  John Levon  <moz@compsoc.man.ac.uk>

	* TODO: update
 
	* libdb/Makefile: remove from CVS
 
	* dae/oprofiled.c:
	* module/oprofile.c: 
	* module/oprofile.h: use better hash function.
	  Fold unused/full entry case into eviction case
	  for faster common path
 
2002-04-27  John Levon  <moz@compsoc.man.ac.uk>

	* configure.in: fix little blooper that shows up
	  when CONFIG_M386 is chosen
 
2002-04-23  Philippe Elie  <phil.el@wanadoo.fr>

	* pp/oprofpp.cpp:
	* pp/oprofpp_util.cpp: yet another bug fix for --sort=
	  and counter nr command line specification ...

2002-04-22  Philippe Elie  <phil.el@wanadoo.fr>

	* dae/opd_proc.c: opd_alarm() flush properly samples files

	* oprof_report/oprof_report.cpp: use the right filename
	  when selecting a shared lib profiled with --separate-samples

2002-04-22  Philippe Elie  <phil.el@wanadoo.fr>

	* pp/op_merge.c: implement merging of the new file format files.
